# HnMChallenge

./: .env  .gitignore  README.md  pipeline.sh  pyproject.toml  send_submission.sh
hnmchallenge/: constant.py  data_reader.py  dataset.py  dataset_interface.py  feature_manager.py  filtered_dataset.py  lgbm_batch_predictions.py  lgbm_predictions.py  lgbm_ranker.py  main.py  recommender_interface.py  single_model_predictions.py  stratified_dataset.py  submission_handler.py  top_pop.py  xgb_predictions.py  xgboost_reranker.py
hnmchallenge/data_analysis/: __init__.py  aayush_user.ipynb  aayush_xgboost.ipynb  add_zero_interactions_user.ipynb  articles.ipynb  cosine_reranking.ipynb  cross_val.ipynb  ensemble.ipynb  ensemble_from_file.ipynb  ensemble_score_rank.ipynb  entropy.ipynb  eval.ipynb  eval2.ipynb  evaluate_rec.ipynb  feature_manager.ipynb  filtered_features_training.ipynb  full_last_week_relevance.ipynb  func_xg_evaluate.ipynb  graph.ipynb  item_in_time.ipynb  item_multiple_buy.ipynb  last_week_relevance_dataset.ipynb  lgbm_predictions.ipynb  multiple_buy.ipynb  plot_analysis.ipynb  popularity_analysis.ipynb  predict_local.ipynb  split_data_xgboost.ipynb  stratified_dataset.ipynb  stratified_features_split.ipynb  stratified_holdin_item.ipynb  stratified_holdin_useritem.ipynb  stratified_relevance.ipynb  stratified_relevance_df2.ipynb  time_weight.ipynb  train_libsvm.ipynb  transactions.ipynb  user_last_day_dataset.ipynb  user_multiple_buy.ipynb  xgb_predictions.ipynb  (+2 more)
hnmchallenge/data_preprocessing/: filtered_articles.py  split_data.py  (+16 more)
tests/: test_hnmchallenge.py
(+140 files in other folders)
